provato a mettere delle checkbox ma non riesco a metterle uno sotto l'altro

--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
@@ -106,11 +106,16 @@
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="FiltroMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Seleziona filtro
                         </button>
-                        <div class="dropdown-menu" id="menudiscesa" aria-labelledby="FiltroMenu">
-                            <!-- Contenuto del dropdown-menu -->
-                            <a class="dropdown-item" href="#">Opzione 1</a>
-                            <a class="dropdown-item" href="#">Opzione 2</a>
-                            <a class="dropdown-item" href="#">Opzione 3</a>
+                        <div class="dropdown-menu" id="menucheck" aria-labelledby="FiltroMenu">
+                            <!-- Contenuto del dropdown-menu con checkbox -->
+                            <label><input type="checkbox" name="filtro" value="Offerte speciali">Offerte speciali</label>
+                            <label><input type="checkbox" name="filtro" value="Ordina per prezzo crescente">Ordina per prezzo crescente</label>
+                            <label><input type="checkbox" name="filtro" value="Tipologia (vegano, vegetariano, senza glutine)">Tipologia (vegano, vegetariano, senza glutine)</label>
+                            <label><input type="checkbox" name="filtro" value="Apericena">Apericena</label>
+                            <label><input type="checkbox" name="filtro" value="Visione eventi sportivi">Visione eventi sportivi</label>
+                            <label><input type="checkbox" name="filtro" value="DJ set">DJ set</label>
+                            <label><input type="checkbox" name="filtro" value="Vista panoramica">Vista panoramica</label>
+                            <label><input type="checkbox" name="filtro" value="Distanza da punti di interesse">Distanza da punti di interesse</label>
                         </div>
                     </div>
                 </div>
