sempre mail di recupero password

--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Login.html
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Login.html
@@ -98,11 +98,11 @@
                         <i class="fas fa-at"></i>
                         <input type="Email" placeholder="Email" id="email" name="email">
                     </div>
-                    <div class="input-field">
+                    <div class="input-field" id="passField">
                         <i class="fas fa-user"></i>
                         <input type="password" placeholder="Password" id="password" name="password">
                     </div>
-                    <p>Password dimenticata?<a href="#" id="reset-password-link"> Clicca qui! </a></p>
+                    <p><a id="TestoPass">Password dimenticata?</a><a href="#" id="reset-password-link"> Clicca qui! </a></p>
                 </div>
                 <div class="btn-field">
                     <input type="hidden" id="page" name="page" value="/index.html">
