--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
@@ -29,7 +29,7 @@
             <button class="btn btn-secondary dropdown-toggle mr-auto" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 
             </button>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu dropdown-menu-right" id="usermenu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="/Favourite/favourite.html">Preferiti</a>
                 <a class="dropdown-item" href="#">Logout</a>
             </div>
@@ -64,7 +64,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Municipi<span class="sr-only">(current)</span></a>
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #fcc100">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: lemonchiffon;">
                         <a class="dropdown-item" href="./Municipio I.html">I Municipio</a>
                         <a class="dropdown-item" href="../Municipio II/Municipio II.html">II Municipio</a>
                         <a class="dropdown-item" href="../Municipio III/Municipio III.html">III Municipio</a>
@@ -104,7 +104,7 @@
                     <!-- Toggler per il dropdown-menu -->
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="FiltroMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Seleziona filtro
+                            SELEZIONA FILTRO
                         </button>
                         <div class="dropdown-menu" id="menucheck" aria-labelledby="FiltroMenu">
                             <!-- Contenuto del dropdown-menu con checkbox -->
