--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
@@ -20,10 +20,13 @@
         <a class="navbar-brand" href="../../index.html">
             <img src="/colosseum.png">
         </a>
+        
+        <button id="cambiaPulsante">A</button>
+
         <a class="navbar-brand mr-auto" href="../../index.html">
             <h3>Municipio I</h3>
         </a>
-			
+		
         <ul class="nav-item dropdown ml-auto" style = "margin-bottom: 0px;">
             <button class="btn btn-secondary dropdown-toggle mr-auto" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 
