Non so cosa sia

--- a/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Reimpostapw.html
+++ b/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Reimpostapw.html
@@ -9,7 +9,10 @@
   <form action="/reset-password" method="post">
     <label for="password">Nuova password</label>
     <input type="password" id="password" name="password" required>
+    <input type="hidden" id="email" name="email">
+    <input type="hidden" id="url" name="url">
     <button type="submit">Reimposta password</button>
   </form>
+<script src="Reimpostapw.js"></script>
 </body>
 </html>
