--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Login.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Login.html
@@ -110,7 +110,13 @@
                     <button type="button" id="signinBtn" class="disable">Accedi</button>
                 </div>
             </form>
-            <div class="btn"></div>
+            <div class="btn">
+            <a href="http://localhost:8000/google">
+                <button type="button" class="login-with-google-btn" >
+                    Accedi con Google
+                </button>
+            </a>
+            </div>
         </div>
 	</div>
     <script>document.getElementById("login-form").setAttribute("action", "/esempio");</script>
