Pagina contattaci integrata

--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/contattaci.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/contattaci.html
@@ -91,7 +91,7 @@
     
     <div class="card" id = "post">
         <div class="image"> </div>
-        <form method="post" action="contattaci.php" id="form">
+        <form method="post" action="/receiveSuggestion" id="form">
             <div class="input-field">
                 <label for="place">Nome del luogo:</label>
                 <input type="text" id="place" name="place">
