--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Login.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Login.html
@@ -111,11 +111,9 @@
                 </div>
             </form>
             <div class="btn">
-            <a href="http://localhost:8000/google">
-                <button type="button" class="login-with-google-btn" >
-                    Accedi con Google
-                </button>
-            </a>
+                <a href="http://localhost:8000/google">
+                    <div id="googleButtonContainer"></div>
+                </a>
             </div>
         </div>
 	</div>
