--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Reimpostapw.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Reimpostapw.html
@@ -9,7 +9,10 @@
   <form action="/reset-password" method="post">
     <label for="password">Nuova password</label>
     <input type="password" id="password" name="password" required>
+    <input type="hidden" id="email" name="email" value="none">
     <button type="submit">Reimposta password</button>
   </form>
 </body>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="reimpostapw.js"></script>
 </html>
