fixes e altre funzioni

--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/diconodinoi.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/diconodinoi.html
@@ -117,7 +117,7 @@
         <div class="item">Item 6</div>
     </div>
 
-    <form class="form" method="post" action="recensioni.php">
+    <form class="form" method="post" action="/inserisciRecensioni">
         <div class="flex">
             <label>
                 <input required="" placeholder="" type="text" class="input" name="nome">
