--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Reimpostapw.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Login/Reimpostapw.html
@@ -10,6 +10,7 @@
     <label for="password">Nuova password</label>
     <input type="password" id="password" name="password" required>
     <input type="hidden" id="email" name="email" value="none">
+    <input type="hidden" id="fromAdmin" name="fromAdmin" value="false">
     <button type="submit">Reimposta password</button>
   </form>
 </body>
