tendenza e pulsanti vari

--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
@@ -90,11 +90,16 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/elemnavbar/contattaci.html">Contattaci</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Tendenza/tendenza.html">Tendenza</a>
+                </li>
             </ul>
         </div>
-
-        
     </nav>
+
+    <div class="theme-container shadow-dark">
+        <img id="theme-icon"    src="https://www.uplooder.net/img/image/2/addf703a24a12d030968858e0879b11e/moon.svg" alt="ERR">
+    </div>
 	<div class="container">
         <div class="row">
             <div class="left-column">
