--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/index.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/index.html
@@ -105,6 +105,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./elemnavbar/contattaci.html">Contattaci</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./Tendenza/tendenza.html">Tendenza</a>
+                </li>
+
             </ul>
         </div>
     </nav>
