--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/contattaci.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/contattaci.html
@@ -84,6 +84,10 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="./contattaci.html">Contattaci<span class="sr-only">(current)</span></a></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Tendenza/tendenza.html">Tendenza</a>
+                </li>
+
             </ul>
         </div>
     </nav>
