decrizioni, foto, pulsanti e filtri m2 m3 m4 m5

--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
@@ -97,15 +97,13 @@
         </div>
     </nav>
 
-    <div class="theme-container shadow-dark">
-        <img id="theme-icon"    src="https://www.uplooder.net/img/image/2/addf703a24a12d030968858e0879b11e/moon.svg" alt="ERR">
-    </div>
+    
 	<div class="container">
         <div class="row">
             <div class="left-column">
                 <div id="map"></div>
             </div>
-            <div class="right-column">
+            <div class="right-column" id = "right-column">
                 <div class="filter-container">
                     <div class="filter-row">
                         <!-- Toggler per il dropdown-menu -->
@@ -137,6 +135,9 @@
                 <ul class="list-container" id="lista-luoghi">
                 
                 </ul>
+                <div class="theme-container shadow-dark">
+                    <img id="theme-icon"    src="https://www.uplooder.net/img/image/2/addf703a24a12d030968858e0879b11e/moon.svg" alt="ERR">
+                </div>
             </div>
         </div>
 	</div>
