--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Tendenza/tendenza.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Tendenza/tendenza.html
@@ -100,9 +100,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Nome Luogo 1</h5>
-                        <p class="card-text">Descrizione breve del Luogo 1</p>
-                        <a href="luogo1.html" class="btn btn-primary">Scopri di più</a>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-primary">Scopri di più</a>
                     </div>
                 </div>
             </div>
@@ -110,9 +110,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Nome Luogo 2</h5>
-                        <p class="card-text">Descrizione breve del Luogo 2</p>
-                        <a href="luogo2.html" class="btn btn-primary">Scopri di più</a>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-primary">Scopri di più</a>
                     </div>
                 </div>
             </div>
@@ -120,9 +120,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Nome Luogo 3</h5>
-                        <p class="card-text">Descrizione breve del Luogo 3</p>
-                        <a href="luogo3.html" class="btn btn-primary">Scopri di più</a>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-primary">Scopri di più</a>
                     </div>
                 </div>
             </div>
@@ -130,9 +130,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Nome Luogo 4</h5>
-                        <p class="card-text">Descrizione breve del Luogo 4</p>
-                        <a href="luogo4.html" class="btn btn-primary">Scopri di più</a>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-primary">Scopri di più</a>
                     </div>
                 </div>
             </div>
@@ -140,9 +140,9 @@
             <div class="col">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Nome Luogo 5</h5>
-                        <p class="card-text">Descrizione breve del Luogo 5</p>
-                        <a href="luogo5.html" class="btn btn-primary">Scopri di più</a>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
+                        <a href="#" class="btn btn-primary">Scopri di più</a>
                     </div>
                 </div>
             </div>
@@ -165,5 +165,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="/localstorage.js"></script>
+    <script src="tendenza.js"></script>
 </body>
 </html>
