--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
@@ -127,7 +127,7 @@
                                 <label><input type="checkbox" name="filtro" value="All you can eat">All you can eat</label>
                             </div>
                         </div>
-                        <label for="filter">Filtra per nome:</label>
+                        <label for="filter">Cerca:</label>
                         <input type="text" id="filter" name="filter">
                     </div>
                 </div>
