--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/index.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/index.html
@@ -44,7 +44,7 @@
             <button class="btn btn-secondary dropdown-toggle mr-auto" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 
             </button>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <div class="dropdown-menu dropdown-menu-right" id="usermenu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="Favourite/favourite.html">Preferiti</a>
                 <a class="dropdown-item" href="#">Logout</a>
             </div>
