--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/diconodinoi.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/elemnavbar/diconodinoi.html
@@ -60,7 +60,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Municipi
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #fcc100">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: lemonchiffon;">
                         <a class="dropdown-item" href="/Municipi/Municipio I/Municipio I.html">I Municipio</a>
                         <a class="dropdown-item" href="/Municipi/Municipio II/Municipio II.html">II Municipio</a>
                         <a class="dropdown-item" href="/Municipi/Municipio III/Municipio III.html">III Municipio</a>
