--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/index.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/index.html
@@ -78,7 +78,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Municipi
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #fcc100">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: lemonchiffon;">
                         <a class="dropdown-item" href="./Municipi/Municipio I/Municipio I.html">I Municipio</a>
                         <a class="dropdown-item" href="./Municipi/Municipio II/Municipio II.html">II Municipio</a>
                         <a class="dropdown-item" href="./Municipi/Municipio III/Municipio III.html">III Municipio</a>
@@ -108,6 +108,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./Tendenza/tendenza.html">Tendenza</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pagina faq/FAQ.html">FAQ</a>
+                </li>
+
 
             </ul>
         </div>
