--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio I/Municipio I.html
@@ -93,6 +93,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/Tendenza/tendenza.html">Tendenza</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pagina faq/FAQ.html">FAQ</a>
+                </li>
+
             </ul>
         </div>
     </nav>
