--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio IX/Municipio IX.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Municipi/Municipio IX/Municipio IX.html
@@ -77,6 +77,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/elemnavbar/contattaci.html">Contattaci</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/Tendenza/tendenza.html">Tendenza</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pagina faq/FAQ.html">FAQ</a>
+                </li>
+
             </ul>
         </div>
     </nav>
