12 ottobre ancora commit

--- a/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Tendenza/tendenza.html
+++ b/labpriv-main(1)/labpriv-main/labpriv-main(1)/labpriv-main/ProgettoAssi V1/public/Tendenza/tendenza.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-light" style="background-color: lemonchiffon;">
+	<nav class="navbar navbar-light" style="background-color: #fc9b00;">
         <a class="navbar-brand" href="/index.html">
             <img src="./trend.png">
         </a>
@@ -59,7 +59,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Municipi
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: #fcc100">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: lemonchiffon;">
                         <a class="dropdown-item" href="/Municipi/Municipio I/Municipio I.html">I Municipio</a>
                         <a class="dropdown-item" href="/Municipi/Municipio II/Municipio II.html">II Municipio</a>
                         <a class="dropdown-item" href="/Municipi/Municipio III/Municipio III.html">III Municipio</a>
